cmake_minimum_required(VERSION 3.21)
project(musicELo)



set(CMAKE_CXX_STANDARD 14)
add_subdirectory(src)
add_subdirectory(test)
#add_executable(musicELo src/main.cpp
#        src/song.cpp src/song.h
#        src/vectorStringFunctions.cpp src/vectorStringFunctions.h src/songElo.cpp src/songElo.h src/inputValidation.cpp src/inputValidation.h src/test.cpp)
